force-app/main/default/objects/Form_LCF_Full_App_1__c/Form_LCF_Full_App_1__c.object-meta.xml
<CustomObject>
    <description>Life Chances Fund - Full Application - 1.0</description>
    <label>Form LCF Full Application 1.0</label>
    <nameField>
        <displayFormat>FAP-{00000}</displayFormat>
        <label>Form ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form LCF Full Application 1.0</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>