force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/Application_Contact__c.field-meta.xml
<CustomField>
    <fullName>Application_Contact__c</fullName>
    <formula>application__r.Contact__r.FirstName + &#39; &#39; +  application__r.Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Contact</label>
    <type>Text</type>
</CustomField>