force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/Application_Contact_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Application_Contact_Organisation__c</fullName>
    <formula>application__r.Contact__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Contact Organisation</label>
    <type>Text</type>
</CustomField>