force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/Assigned_to_me__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_me__c</fullName>
    <formula>application__r.Assigned_to_me__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned to me</label>
    <type>Checkbox</type>
</CustomField>