force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/Commissioner_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Commissioner_Organisation__c</fullName>
    <formula>IF(NOT(ISBLANK(ov_primary_commissioner__c)),ov_primary_commissioner__c, ov_applicant_organisation_name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commissioner Organisation</label>
    <type>Text</type>
</CustomField>