force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/DE_Responsible_Person__c.field-meta.xml
<CustomField>
    <fullName>DE_Responsible_Person__c</fullName>
    <inlineHelpText>Name of the legally responsible person</inlineHelpText>
    <label>DE - Responsible Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>