force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/de_section_status__c.field-meta.xml
<CustomField>
    <fullName>de_section_status__c</fullName>
    <inlineHelpText>Declaration section status</inlineHelpText>
    <label>DE - Section Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Form_Section_Status</valueSetName>
    </valueSet>
</CustomField>