force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/ev_evaluation_commissioning_progress__c.field-meta.xml
<CustomField>
    <fullName>ev_evaluation_commissioning_progress__c</fullName>
    <inlineHelpText>Please set out what you have done so far in commissioning evaluation</inlineHelpText>
    <label>EV - Evaluation Commissioning Progress</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>