force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/ev_evaluation_funding__c.field-meta.xml
<CustomField>
    <fullName>ev_evaluation_funding__c</fullName>
    <inlineHelpText>How much funding has been allocated?</inlineHelpText>
    <label>EV - Evaluation Funding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>