force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/ev_evaluation_funding_allocated__c.field-meta.xml
<CustomField>
    <fullName>ev_evaluation_funding_allocated__c</fullName>
    <inlineHelpText>Have you allocated any funding to cover the cost of evaluation and learning?</inlineHelpText>
    <label>EV - Evaluation Funding Allocated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>