force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/ev_independent_evaluation__c.field-meta.xml
<CustomField>
    <fullName>ev_independent_evaluation__c</fullName>
    <inlineHelpText>Are you planning to commission an independent evaluation of your project?</inlineHelpText>
    <label>EV - Independent Evaluation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>