force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/ev_sharing_learning_approach__c.field-meta.xml
<CustomField>
    <fullName>ev_sharing_learning_approach__c</fullName>
    <inlineHelpText>Please set out how you will meet the LCF requirement of sharing learning</inlineHelpText>
    <label>EV - Sharing Learning Approach</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>