force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/fn_additional_funding_due__c.field-meta.xml
<CustomField>
    <fullName>fn_additional_funding_due__c</fullName>
    <inlineHelpText>When do you expect to secure all this funding?</inlineHelpText>
    <label>FN - Additional Funding Due</label>
    <type>Date</type>
</CustomField>