force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/fn_additional_funding_required__c.field-meta.xml
<CustomField>
    <fullName>fn_additional_funding_required__c</fullName>
    <inlineHelpText>How much other funding do you require from other sources?</inlineHelpText>
    <label>FN - Additional Funding Required</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>