force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/fn_additional_funding_secured__c.field-meta.xml
<CustomField>
    <fullName>fn_additional_funding_secured__c</fullName>
    <inlineHelpText>Have you secured this funding?</inlineHelpText>
    <label>FN - Additional Funding Secured</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>