force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/fn_alternative_overhead_spend__c.field-meta.xml
<CustomField>
    <fullName>fn_alternative_overhead_spend__c</fullName>
    <description>This should include cost of raising funds if applicable. If there is no alternative provision, put £0.</description>
    <inlineHelpText>Estimated spend on overhead to support service provision</inlineHelpText>
    <label>FN - Alternative Overhead Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>