force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/fn_alternative_service_spend__c.field-meta.xml
<CustomField>
    <fullName>fn_alternative_service_spend__c</fullName>
    <description>Page Title:Alternative Financials</description>
    <inlineHelpText>Estimated spend on service provision</inlineHelpText>
    <label>FN - Alternative Service Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>