force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/fn_alternative_service_users_alt__c.field-meta.xml
<CustomField>
    <fullName>fn_alternative_service_users_alt__c</fullName>
    <inlineHelpText>Number of service users completing an alternative intervention</inlineHelpText>
    <label>FN - Alternative Service Users (Alt)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>