force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/fn_alternative_service_users_engage__c.field-meta.xml
<CustomField>
    <fullName>fn_alternative_service_users_engage__c</fullName>
    <inlineHelpText>Number of service users engaging with the interventions</inlineHelpText>
    <label>FN - Alternative Service Users (Engage)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>