force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/fn_costs_covered_outcomes__c.field-meta.xml
<CustomField>
    <fullName>fn_costs_covered_outcomes__c</fullName>
    <inlineHelpText>Will all costs of the project be covered by the outcomes payments?</inlineHelpText>
    <label>FN - Costs Covered by Payments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>