force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/fn_max_non_cash_government__c.field-meta.xml
<CustomField>
    <fullName>fn_max_non_cash_government__c</fullName>
    <inlineHelpText>For central government</inlineHelpText>
    <label>FN - Max Non-Cash (Government)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>