force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/fn_max_non_cash_not_involved__c.field-meta.xml
<CustomField>
    <fullName>fn_max_non_cash_not_involved__c</fullName>
    <inlineHelpText>For local commissioners not directly involved in the project</inlineHelpText>
    <label>FN - Max Non-Cash (Not Involved)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>