force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/fn_max_savings_commissioners__c.field-meta.xml
<CustomField>
    <fullName>fn_max_savings_commissioners__c</fullName>
    <description>Page Title:Cashable Savings</description>
    <inlineHelpText>For local commissioners of the project</inlineHelpText>
    <label>FN - Max Savings (Commissioners)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>