force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/fn_max_savings_other__c.field-meta.xml
<CustomField>
    <fullName>fn_max_savings_other__c</fullName>
    <inlineHelpText>Other local community savings</inlineHelpText>
    <label>FN - Max Savings (Other)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>