force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/fn_max_savings_total__c.field-meta.xml
<CustomField>
    <fullName>fn_max_savings_total__c</fullName>
    <inlineHelpText>Total for all organisations generating savings from the SIB</inlineHelpText>
    <label>FN - Max Savings (Total)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>