force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/fn_planning_progress__c.field-meta.xml
<CustomField>
    <fullName>fn_planning_progress__c</fullName>
    <inlineHelpText>Please set out what you have done so far in planning arrangements for data</inlineHelpText>
    <label>FN - Planning Progress</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>