force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/fn_planning_start_date__c.field-meta.xml
<CustomField>
    <fullName>fn_planning_start_date__c</fullName>
    <inlineHelpText>When do you expect to start this planning?</inlineHelpText>
    <label>FN - Planning Start Date</label>
    <type>Date</type>
</CustomField>