force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/fn_planning_started__c.field-meta.xml
<CustomField>
    <fullName>fn_planning_started__c</fullName>
    <inlineHelpText>Have you started planning data collection, analysis and verification?</inlineHelpText>
    <label>FN - Planning Started</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>