force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/fn_proposed_sib_overhead_spend__c.field-meta.xml
<CustomField>
    <fullName>fn_proposed_sib_overhead_spend__c</fullName>
    <description>This should include cost of raising funds.</description>
    <inlineHelpText>Estimated spend on overhead to support service provision</inlineHelpText>
    <label>FN - Proposed SIB (Overhead Spend)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>