force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/fn_proposed_sib_service_users__c.field-meta.xml
<CustomField>
    <fullName>fn_proposed_sib_service_users__c</fullName>
    <inlineHelpText>Number of service users annually</inlineHelpText>
    <label>FN - Proposed SIB (Service Users)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>