force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/fn_proposed_sib_service_users_success__c.field-meta.xml
<CustomField>
    <fullName>fn_proposed_sib_service_users_success__c</fullName>
    <inlineHelpText>Number of service users achieving at least one positive outcome</inlineHelpText>
    <label>FN - Proposed SIB (Service User Success)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>