force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/fn_saving_calculation_methodology__c.field-meta.xml
<CustomField>
    <fullName>fn_saving_calculation_methodology__c</fullName>
    <description>Please explain how you determined how the savings will accrue. Your answer should include a detailed breakdown of who will benefit from these savings and when.</description>
    <inlineHelpText>Outline the rationale/methodology you have used to calculate your project's estimated savings.</inlineHelpText>
    <label>FN - Saving Calculation Methodology</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>