force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/fn_savings_exceed_contribution__c.field-meta.xml
<CustomField>
    <fullName>fn_savings_exceed_contribution__c</fullName>
    <description>By significantly, we mean by over £1m or by more than 25% of the total savings (whichever is the greatest). The LCF may still support your project, but we will need a stronger case from your project to warrant this support.</description>
    <inlineHelpText>Do the savings for your project significantly exceed the total contribution to outcome payments by local commissioners?</inlineHelpText>
    <label>FN - Savings Exceed Contribution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>