force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/fn_section_status__c.field-meta.xml
<CustomField>
    <fullName>fn_section_status__c</fullName>
    <inlineHelpText>Financials Section Status</inlineHelpText>
    <label>FN - Section Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Form_Section_Status</valueSetName>
    </valueSet>
</CustomField>