force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/fn_top_up_justification__c.field-meta.xml
<CustomField>
    <fullName>fn_top_up_justification__c</fullName>
    <inlineHelpText>Please explain why an LCF top-up is needed.</inlineHelpText>
    <label>FN - Top Up Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>