force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/fn_value_for_money__c.field-meta.xml
<CustomField>
    <fullName>fn_value_for_money__c</fullName>
    <description>Considering the expected cost of your project, and based on the financial and non-financial benefits outlined, briefly summarise how your project will deliver value for money. This should include consideration of how the costs, savings and wider benefits compare with existing services.</description>
    <inlineHelpText>How will your project provide value for money?</inlineHelpText>
    <label>FN - Value for Money</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>