force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/Form_Complete__c.field-meta.xml
<CustomField>
    <fullName>Form_Complete__c</fullName>
    <formula>AND(
  ISPICKVAL(ov_section_status__c, &#39;COMPLETE&#39;), 
  ISPICKVAL(si_section_status__c, &#39;COMPLETE&#39;), 
  ISPICKVAL(su_section_status__c, &#39;COMPLETE&#39;), 
  ISPICKVAL(iv_section_status__c, &#39;COMPLETE&#39;), 
  ISPICKVAL(ou_section_status__c, &#39;COMPLETE&#39;), 
  ISPICKVAL(fn_section_status__c, &#39;COMPLETE&#39;), 
  ISPICKVAL(ev_section_status__c, &#39;COMPLETE&#39;), 
  ISPICKVAL(or_section_status__c, &#39;COMPLETE&#39;), 
  ISPICKVAL(de_section_status__c, &#39;COMPLETE&#39;) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is form complete?</inlineHelpText>
    <label>Form Complete</label>
    <type>Checkbox</type>
</CustomField>