force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/iv_interventions_additional__c.field-meta.xml
<CustomField>
    <fullName>iv_interventions_additional__c</fullName>
    <description>This references statutory services that are paid for and provided for by central government. LCF will only support the provision of services that are paid for and delivered at a local government level, or that are paid for centrally but delivered through local government services. It cannot support any services that are delivered by central government.</description>
    <inlineHelpText>How will you ensure your intervention is additional to any provision that is the
responsibility of central government to provide?</inlineHelpText>
    <label>IV - Interventions Additional</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>