force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/iv_interventions_approach__c.field-meta.xml
<CustomField>
    <fullName>iv_interventions_approach__c</fullName>
    <description>What is the evidence that supports your approach? For example, evidence from the monitoring and evaluation of existing provision, academic evidence, and views and published works of experts in the field.</description>
    <inlineHelpText>Why have you chosen your approach to interventions?</inlineHelpText>
    <label>IV - Interventions Approach</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>