force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/iv_interventions_outline__c.field-meta.xml
<CustomField>
    <fullName>iv_interventions_outline__c</fullName>
    <description>If you don’t know the specific intervention at this stage, please give indicative examples of the types of intervention you expect to see (which could be based on current interventions).</description>
    <inlineHelpText>Outline the intervention(s) you want to use</inlineHelpText>
    <label>IV - Interventions Outline</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>