force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/IV_Section_Status__c.field-meta.xml
<CustomField>
    <fullName>IV_Section_Status__c</fullName>
    <inlineHelpText>Interventions section status</inlineHelpText>
    <label>IV - Section Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Form_Section_Status</valueSetName>
    </valueSet>
</CustomField>