force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/or_address__c.field-meta.xml
<CustomField>
    <fullName>or_address__c</fullName>
    <inlineHelpText>Address</inlineHelpText>
    <label>OR - Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>