force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/or_auditor_name__c.field-meta.xml
<CustomField>
    <fullName>or_auditor_name__c</fullName>
    <description>Page Title:Auditor Address</description>
    <inlineHelpText>Name</inlineHelpText>
    <label>OR - Auditor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>