force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/or_changes__c.field-meta.xml
<CustomField>
    <fullName>or_changes__c</fullName>
    <description>For example legal name, address, registration number or financial position</description>
    <inlineHelpText>Have any of the organisation details of the lead applicant changed since you submitted the Expression of Interest form?</inlineHelpText>
    <label>OR - Changes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>