force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/or_legal_contact_daytime_phone__c.field-meta.xml
<CustomField>
    <fullName>or_legal_contact_daytime_phone__c</fullName>
    <inlineHelpText>Daytime number</inlineHelpText>
    <label>OR - Legal Contact Daytime Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>