force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/or_legal_contact_last_name__c.field-meta.xml
<CustomField>
    <fullName>or_legal_contact_last_name__c</fullName>
    <inlineHelpText>Last name</inlineHelpText>
    <label>OR - Legal Contact Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>