force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/or_legal_contact_mobile__c.field-meta.xml
<CustomField>
    <fullName>or_legal_contact_mobile__c</fullName>
    <defaultValue>&#39;N/A&#39;</defaultValue>
    <inlineHelpText>Mobile number (optional)</inlineHelpText>
    <label>OR - Legal Contact Mobile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>