force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/or_legal_contact_position__c.field-meta.xml
<CustomField>
    <fullName>or_legal_contact_position__c</fullName>
    <inlineHelpText>Position or job title</inlineHelpText>
    <label>OR - Legal Contact Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>