force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/or_legal_contact_work_email__c.field-meta.xml
<CustomField>
    <fullName>or_legal_contact_work_email__c</fullName>
    <inlineHelpText>Work email address</inlineHelpText>
    <label>OR - Legal Contact Email</label>
    <type>Email</type>
</CustomField>