force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/or_name__c.field-meta.xml
<CustomField>
    <fullName>or_name__c</fullName>
    <inlineHelpText>What is the legal name of your organisation?</inlineHelpText>
    <label>OR - Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>