force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/or_postcode__c.field-meta.xml
<CustomField>
    <fullName>or_postcode__c</fullName>
    <inlineHelpText>Postcode</inlineHelpText>
    <label>OR - Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>