force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/or_primary_contact_changed__c.field-meta.xml
<CustomField>
    <fullName>or_primary_contact_changed__c</fullName>
    <inlineHelpText>Has your primary contact changed since you submitted the Expression of Interest form?</inlineHelpText>
    <label>OR - Primary Contact Changed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>