force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/or_primary_contact_daytime_phone__c.field-meta.xml
<CustomField>
    <fullName>or_primary_contact_daytime_phone__c</fullName>
    <inlineHelpText>Daytime number</inlineHelpText>
    <label>OR - Primary Contact Daytime Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>