force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/or_primary_contact_first_name__c.field-meta.xml
<CustomField>
    <fullName>or_primary_contact_first_name__c</fullName>
    <inlineHelpText>First name</inlineHelpText>
    <label>OR - Primary Contact First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>