force-app/main/default/objects/Form_LCF_Full_App_1__c/fields/or_primary_contact_mobile__c.field-meta.xml
<CustomField>
    <fullName>or_primary_contact_mobile__c</fullName>
    <inlineHelpText>Mobile number (optional)</inlineHelpText>
    <label>OR - Primary Contact Mobile Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>